fixed horizontal scroll bar appearing when not needed

--- a/html5up-dimension/assets/css/main.css
+++ b/html5up-dimension/assets/css/main.css
@@ -91,6 +91,8 @@ input, select, textarea {
 
 	html {
 		box-sizing: border-box;
+		overflow-x: hidden;
+		overflow-y: auto;
 	}
 
 	*, *:before, *:after {
@@ -1121,6 +1123,7 @@ input, select, textarea {
 		left: 0;
 		width: 100%;
 		height: 100vh;
+		height: 100svh;
 		z-index: 1;
 	}
 
@@ -1205,6 +1208,7 @@ input, select, textarea {
 		justify-content: space-between;
 		position: relative;
 		min-height: 100vh;
+		min-height: 100svh;
 		width: 100%;
 		padding: 4rem 2rem;
 		z-index: 3;
@@ -1756,6 +1760,8 @@ input, select, textarea {
 
 	html {
 		box-sizing: border-box;
+		overflow-x: hidden;
+		overflow-y: auto;
 	}
 
 	*, *:before, *:after {
@@ -2869,6 +2875,7 @@ input, select, textarea {
 		justify-content: space-between;
 		position: relative;
 		min-height: 100vh;
+		min-height: 100svh;
 		width: 100%;
 		padding: 4rem 2rem;
 		z-index: 3;
